# visualFrameInfo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: architecture.md  benchmark-perf-batch1.md  benchmark-perf-batch2.md  bugfixes.md  changes.md  development.md  diagrams.md  release-v0.1.3-ui-polish.md  release-v0.1.4.md  release.md  requirements.md  ui-spec.md
scripts/: _bench_compare.ps1  benchmark_ffprobe_vs_showinfo.ps1  deploy_release.ps1  package_inno.ps1  publish_github_release.ps1
scripts/inno/: visualFrameInfo.iss
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/models/: AnalysisSummary.h  FrameInfo.h  GopSegment.h
src/parsers/: ShowInfoParser.cpp  ShowInfoParser.h
src/services/: FfmpegRunner.cpp  FfmpegRunner.h
src/widgets/: FrameTableView.cpp  FrameTableView.h  GopHistogramWidget.cpp  GopHistogramWidget.h  PreviewFrameWidget.cpp  PreviewFrameWidget.h  SummaryPanel.cpp  SummaryPanel.h  TimelineOverviewBar.cpp  TimelineOverviewBar.h  TimelineView.cpp  TimelineView.h
